package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "dashboard",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    data = glob(["schema/*.json"]),
    module_name = "@spica-server/dashboard",
    deps = [
        "//packages/core/schema",
        "//stacks/api/passport",
        "//stacks/api/passport/guard",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/node",
    ],
)
