load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "dashboard",
    package_name = "@spica-server/dashboard",
    srcs = glob([
        "**/*.ts",
        "schema/*.json",
    ]),
    deps = [
        "//packages/core/schema",
        "//packages/database",
        "//stacks/api/passport",
        "//stacks/api/passport/guard",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/node",
    ],
)
