package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools/dgeni:index.bzl", "docs")

ts_library(
    name = "function",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    data = glob(["src/schema/*.json"]),
    module_name = "@spica-server/function",
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/schema",
        "//packages/database",
        "//stacks/api/activity/services",
        "//stacks/api/function/enqueuer",
        "//stacks/api/function/pkgmanager",
        "//stacks/api/function/queue/proto",
        "//stacks/api/function/scheduler",
        "//stacks/api/function/src/log",
        "//stacks/api/function/webhook",
        "//stacks/api/passport/guard",
        "//stacks/api/passport/policy",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/websockets",
        "@npm//@types/json-schema",
        "@npm//@types/mongodb",
        "@npm//@types/node",
        "@npm//rimraf",
        "@npm//rxjs",
        "@npm//typescript",
    ],
)

docs(
    name = "docs",
    srcs = [
        "src/function.controller.ts",
    ],
    doc_name = "function",
    tags = ["function-docs"],
    exports = [
        "Function",
    ],
    deps = [
        "//packages/database",
    ],
)
