load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

ts_project(
    name = "function",
    package_name = "@spica-server/function",
    srcs = glob([
        "src/**/*.ts",
        "src/schema/*.json",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/patch",
        "//packages/core/schema",
        "//packages/database",
        "//packages/interface/representative",
        "//stacks/api/activity/services",
        "//stacks/api/asset",
        "//stacks/api/function/enqueuer",
        "//stacks/api/function/pkgmanager",
        "//stacks/api/function/queue/proto",
        "//stacks/api/function/scheduler",
        "//stacks/api/function/services",
        "//stacks/api/function/src/log",
        "//stacks/api/function/webhook",
        "//stacks/api/machinery",
        "//stacks/api/passport/guard",
        "//stacks/api/passport/policy",
        "//stacks/api/replication",
        "//stacks/api/status",
        "//stacks/api/versioncontrol",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/websockets",
        "@npm//@types/json-schema",
        "@npm//@types/node",
        "@npm//axios",
        "@npm//rimraf",
        "@npm//rxjs",
        "@npm//typescript",
    ],
)

docs(
    name = "docs",
    srcs = [
        "src/function.controller.ts",
    ],
    doc_name = "function",
    tags = ["function-docs"],
    exports = [
        "Function",
    ],
    deps = [
        "//packages/database",
    ],
)
