package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "machinery",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    module_name = "@spica-server/machinery",
    deps = [
        "//packages/core/schema",
        "//packages/database",
        "@npm//@nestjs/common",
        "@npm//@types/json-schema",
        "@npm//body-parser",
        "@npm//rxjs",
    ],
)
