package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "machinery",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    module_name = "@spica-server/machinery",
    deps = [
        "//packages/core/schema",
        "//packages/database",
        "//stacks/api/passport/guard",
        "@npm//@nestjs/common",
        "@npm//@types/body-parser",
        "@npm//@types/json-schema",
        "@npm//body-parser",
        "@npm//rxjs",
    ],
)
