load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "machinery",
    package_name = "@spica-server/machinery",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    deps = [
        "//packages/core/schema",
        "//packages/database",
        "//stacks/api/passport/guard",
        "@npm//@nestjs/common",
        "@npm//@types/body-parser",
        "@npm//@types/json-schema",
        "@npm//body-parser",
        "@npm//rxjs",
        "@npm//yaml",
        "//packages/core/differ",
    ],
)
