package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools/dgeni:index.bzl", "docs")

ts_library(
    name = "passport",
    srcs = glob([
        "index.ts",
        "src/**/*.ts",
    ]),
    module_name = "@spica-server/passport",
    deps = [
        "//packages/database",
        "//stacks/api/passport/apikey",
        "//stacks/api/passport/guard",
        "//stacks/api/passport/identity",
        "//stacks/api/passport/policy",
        "//stacks/api/preference/services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/passport",
        "@npm//@types/node-forge",
        "@npm//node-forge",
        "@npm//rxjs",
        "@npm//saml2-js",
        "@npm//uuid",
    ],
)

docs(
    name = "docs",
    srcs = [
        "passport.controller.ts",
    ],
    doc_name = "passport",
    tags = ["passport-docs"],
    exports = [
        "passport",
    ],
    deps = [
        "//packages/database",
    ],
)
