package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools/dgeni:index.bzl", "docs")

ts_library(
    name = "passport",
    srcs = glob([
        "index.ts",
        "src/**/*.ts",
    ]),
    data = glob(["src/schemas/*.json"]),
    module_name = "@spica-server/passport",
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/database",
        "//stacks/api/passport/apikey",
        "//stacks/api/passport/guard",
        "//stacks/api/passport/identity",
        "//stacks/api/passport/policy",
        "//stacks/api/preference/services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/passport",
        "@npm//@types/body-parser",
        "@npm//@types/node-forge",
        "@npm//@types/saml2-js",
        "@npm//axios",
        "@npm//body-parser",
        "@npm//node-forge",
        "@npm//rxjs",
        "@npm//saml2-js",
        "@npm//uuid",
    ],
)

docs(
    name = "docs",
    srcs = [
        "src/passport.controller.ts",
    ],
    doc_name = "passport",
    exports = [
        "passport",
    ],
    deps = [
        "//packages/database",
    ],
)
