load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "preference",
    package_name = "@spica-server/preference",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    deps = [
        "//packages/interface/representative",
        "//packages/database",
        "//stacks/api/activity/services",
        "//stacks/api/passport",
        "//stacks/api/preference/services",
        "//stacks/api/versioncontrol",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/mongodb",
        "@npm//rxjs",
    ],
)
