load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "replication",
    package_name = "@spica-server/replication",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    deps = [
        "//packages/database",
        "@npm//rxjs",
        "@npm//uniqid",
    ],
)
