package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "stack",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    module_name = "@spica-server/stack",
    deps = [
        "@npm//@nestjs/common",
        "@npm//@types/json-schema",
    ],
)