package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "status",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    module_name = "@spica-server/status",
    deps = [
        "//packages/core",
        "//stacks/api/passport/guard",
        "//stacks/api/status/services",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
    ],
)
