load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

ts_project(
    name = "storage",
    package_name = "@spica-server/storage",
    srcs = glob([
        "src/**/*.ts",
        "src/schema/*.json",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/database",
        "//packages/database/pipeline",
        "//stacks/api/activity/services",
        "//stacks/api/passport/guard",
        "//stacks/api/status",
        "@npm//@google-cloud/storage",
        "@npm//@nestjs/common",
        "@npm//@nestjs/platform-express",
        "@npm//@nestjs/core",
        "@npm//@types/body-parser",
        "@npm//@types/bson",
        "@npm//@types/mongodb",
        "@npm//@types/node",
        "@npm//aws-sdk",
        "@npm//body-parser",
        "@npm//bson",
        "@npm//etag",
        "@npm//rxjs",
    ],
)

docs(
    name = "docs",
    srcs = [
        "src/storage.controller.ts",
    ],
    doc_name = "storage",
    tags = ["storage-docs"],
    exports = [
        "storage",
    ],
    deps = [
        "//packages/database",
    ],
)
