load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "versioncontrol",
    package_name = "@spica-server/versioncontrol",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    deps = [
        "//packages/core/representative",
        "//packages/core/differ",
        "//stacks/api/passport/guard",
        "@npm//@nestjs/common",
        "@npm//dotenv",
        "@npm//simple-git",
        "@npm//yaml",
    ],
)
